@@ -17,7 +17,7 @@ Name: rpm
 %define version @VERSION@
 Version: %{version}
 %{expand: %%define rpm_version %{version}}
-Release: 0.54
+Release: 0.55
 Group: System Environment/Base
 Source: ftp://ftp.rpm.org/pub/rpm/dist/rpm-4.0.x/rpm-%{rpm_version}.tar.gz
 Copyright: GPL
@@ -516,6 +516,7 @@ fi
 %changelog
 * Wed Jul 24 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.54
 - imbue %ghost with missingok attribute with --verify (#68933).
+- fix: segfault if given a text file as 2nd arg to -Uvh (#69508).
 
 * Tue Jul 23 2002 Jeff Johnson <jbj@redhat.com> 4.1-0.53
 - verify signatures/digests retrieved through rpmdbNextIterator().
